--- a/_includes/site-form-new.html
+++ b/_includes/site-form-new.html
@@ -44,7 +44,7 @@
 </form>
 {% unless include.netlify_form %}
   <script>
-    var email = "{{ site.email | split: "" | reverse | join: "" }}";
+    var email = "{{ site.env.EMAIL | split: "" | reverse | join: "" }}";
     var unraveledEmail = email.split("").reverse().join("");
     var form = document.querySelector(".form--{{ name_id }}");
       form.setAttribute("action", "https://formsubmit.co/" + unraveledEmail);
